swagger add
